Login and  OTP screen dark mode handle and Navigation with code issue handle

--- a/new-invoice-frontend/main/src/app/authentication/signin/signin.component.scss
+++ b/new-invoice-frontend/main/src/app/authentication/signin/signin.component.scss
@@ -1,5 +1,5 @@
 .auth-form-section {
-    background-color: black;
+    background-color: white;
     opacity: 0.7;
 }
 
@@ -10,11 +10,9 @@
 }
 
 .welcome-msg {
-
-    color: white !important;
+    color: black !important;
 }
 
 .cust-center {
     text-align: center;
 }
-
